src/main/default/objects/Mascot__c/Mascot__c.object-meta.xml
<CustomObject>
    <description>Helper critters here to help you succeed with Salesforce!</description>
    <label>Mascot</label>
    <nameField>
        <label>Mascot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mascots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>