src/main/default/objects/Mascot__c/fields/Biography__c.field-meta.xml
<CustomField>
    <fullName>Biography__c</fullName>
    <label>Biography</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>