src/main/default/objects/Mascot__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <formula>IMAGE( &#39;/sfc/servlet.shepherd/version/download/&#39;+Picture_Id__c , Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>