src/main/default/objects/Mascot__c/fields/Picture_Id__c.field-meta.xml
<CustomField>
    <fullName>Picture_Id__c</fullName>
    <label>Picture_Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>